--- a/.github/actions/joke-action/action.yml
+++ b/.github/actions/joke-action/action.yml
@@ -2,6 +2,10 @@ name: "my joke action"
 
 description: "use an external api to retrieve and display a joke"
 
+outputs:
+  joke-output:
+    description: Teh resulting joke from the icanhazdadjokes API
+    
 runs:
   using: "node12"
   main: "main.js"
